examples/test/testpolicy10298.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10298
  namespace: namespace339
spec:
  podSelector:
    matchLabels:
      key25: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value0
          key32: value24
          key21: value12
      podSelector:
        matchLabels:
          key37: value28
          key43: value1
